add login and register and room list page

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,8 +1,32 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   </head>
   <body>
+    <header>
+      <div class="header">
+      </div>
+    </header>
+    <main>
+      <div class="login">
+        <div class="login__form">
+          <section class="login__section">
+            <div class="login__section-info">
+              <input type="text" id="userId" placeholder="username"/>
+              <input type="password" id="userPw" placeholder="password"/>
+              <button id="loginBtn">login</button>
+              <p class="message">Not registered? <a href="/html/register.html">Create an account</a></p>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+    <nav>
+    </nav>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/login.js"></script>
   </body>
 </html>
